added contents to README file

--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
        <!-- Navbar goes here -->
 <header>
     <nav>
-        
+
     </nav>
 </header>
     <!-- Page Layout here -->
     <div class="row">
 
-        <div class="col s3">
+        <div class="col s3 m4 l6">
           <!-- Grey navigation panel -->
         </div>
-  
         <div class="col s9">
           <!-- Teal page content  -->
         </div>
-  
+  <div class="row">
+    <div class="col s3">
+        <!-- Grey navigation panel -->
+      </div>
+  </div>
       </div>
     </main>
     
