--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
           <div class="col s12">
             <div class="card-panel grey lighten-2 jumbotronStyle">
               <div class="container">
-                <h5>Search Result</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                <h5>Chicago(10/31/21)</h5>
+                <p>Temp:51.58</p>
+                <p>Wind:4</p>
+                <p>humidity: 71</p>
+                <p>UV Index: 0.47</p>
               </div>
             </div>
           </div>
@@ -111,6 +114,7 @@
 <footer>
 
 </footer>
+<script src="assets/js/script.js"></script> 
 </body>
 
 </html>
