added search history function with local storage

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <a id="search-btn" class="btn teal lighten-2 col s12"></a>
         </div>
         <!-- search history -->
-        <div class="row">
-          <a id="search-btn" class="btn grey lighten-2 col s12"></a>
+        <div id="search-history" class="row">
+          
         </div>
       </div>
 
