--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div class="search input-field col s12">
               <div class="search-panel card-panel">
                 <div class="input-field">
-                  <input class="input-field" type="text"  id="search-query">
-                  <label for="search">Search</label>
+                  <input class="input-field" type="text" placeholder="Search" id="search-query">
+            
                 </div>
               </div>
             </div>
