updated README file

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <i class="fa fa-search"></i>
           </a>
         </div>
+        <hr>
         <!-- search history -->
         <div id="search-history" class="row">
         
@@ -69,7 +70,7 @@
         </div>
         <!-- left bottom col 5 day forecast cards -->
         <div>
-          <p>5 day forecast</p>
+          <p class="five-day">5 day forecast</p>
         </div>
         <div class="row flexbox">
         
@@ -78,7 +79,7 @@
     </div>
   </main>
   <footer>
-    <p>© Lydia Loy 2021</p>
+    <p class="center">© Lydia Loy 2021</p>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
     integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
