updated README file with gif file and video, added license

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
   </main>
   <footer>
-    <h5 class="center">Thanks for visiting!</h5>
+    <p class="center"> &copy; <script>document.write(new Date().getFullYear()); </script> by Lydia Loy. All rights reserved.</p>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
     integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
